# rust-gds

./: .gitignore  8g.sh  COLLECTIONS_MACRO_ANALYSIS.md  COLLECTIONS_MACRO_CONSOLIDATION.md  COMMIT_MSG.txt  COMMIT_MSG_ML_PIPELINE_CLEANUP.txt  CONFIG_MIGRATION_PLAN.md  Cargo.toml  DOCUMENTATION_MANIFEST_2025_10_18.md  EXECUTIVE_SUMMARY_2025_10_18.md  LICENSE  PAGERANK_SEED_STATUS.md  PROJECTION_INDEX.md  PROJECTION_QUICK_REFERENCE.md  QUICK_SESSION_SNAPSHOT.md  README.md  SESSION_SUMMARY_PROJECTION_FIVE_FOLD.md  SESSION_SUMMARY_RECURSIVE_DESCENT.md  cmp.txt  cr.sh  debug_backward.rs  errs.txt  package.json  test-safe.sh  test_phase_5_4
gds/: Cargo.toml  build.rs  resources.txt
gds/doc/adr/: adr-hyperschema-selfpositing-exponent.md
gds/examples/: atomic_bitset_comparison.rs  collections_quick_tour.rs  concurrency_basics.rs  config_showcase.rs  disjoint_set_struct_showcase.rs  dyadic_property_store_demo.rs  eight_billion_nodes.rs  graphstore_graph_api_exploration.rs  graphstore_walkthrough.rs  huge_array_with_generator.rs  huge_atomic_bitset_showcase.rs  huge_long_array_builder_showcase.rs  memest_showcase.rs  memory_showcase.rs  ml_config_showcase.rs  monadic_property_store_demo.rs  monadic_with_config.rs  node_property_store_basics.rs  node_value_access.rs  padded_atomic_long_showcase.rs  paged_stack_showcase.rs  partition_showcase.rs  pentadic_property_store_demo.rs  pregel_connected_components.rs  pregel_propertystore_integration.rs  primitive_iterators.rs  progressive_scale_demo.rs  projection_showcase.rs  property_showcase.rs  read_only_huge_long_array_showcase.rs  relationship_cursor_traversal.rs  relationship_property_filtered_view.rs  relationship_property_store_basics.rs  sharded_long_long_map_showcase.rs  tetradic_property_store_demo.rs  traversal_inspector.rs  triadic_property_store_demo.rs  virtual_threads_showcase.rs
gds/src/: all_pairs_shortest_path.rs  approx_max_k_cut.rs  articulationpoints.rs  betweenness.rs  bridges.rs  closeness.rs  degree.rs  edge_splitter.rs  fast_rp.rs  graph_coloring.rs  graph_sage.rs  harmonic.rs  hits.rs  indirect_exposure.rs  influence_maximization.rs  k1_coloring.rs  k_core.rs  k_means.rs  kge.rs  label_propagation.rs  lcc.rs  leiden.rs  lib.rs  link_prediction.rs  logging.rs  louvain.rs  modularity_optimization.rs  node2vec.rs  node_similarity.rs  pagerank.rs  random_walk.rs  scc.rs  shortest_path.rs  single_source_shortest_path.rs  speaker_listener_lpa.rs  triangle_count.rs  wcc.rs  yens_k_shortest_paths.rs
gds/src/applications/: mod.rs
gds/src/collections/: array_util.rs  bit_set.rs  hyper_store.rs  indirect_comparator.rs  long_multiset.rs  mod.rs  page_util.rs  prelude.rs  primitive.rs
gds/src/concurrency/: batch_size.rs  concurrency_level.rs  mod.rs
gds/src/config/: algo_config.rs  collections_config.rs  graph_config.rs  graph_store_config.rs  io_config.rs  mod.rs  model_config.rs  morph_config.rs  pregel_config.rs  property_store_config.rs  (+1 more)
gds/tests/: arc_sharing_and_snapshots.rs  execute_pagerank_procedure.rs  execute_sum_procedure.rs  gradient_computation.rs  gradient_computation_debug_test.rs  gradient_computation_test.rs  gradient_descent.rs  gradient_descent_integration_test.rs  graphstore_as_container.rs  integration_sum_executor.rs  linear_regression.rs  linear_regression_debug_test.rs  linear_regression_integration_tests.rs  logistic_regression_integration_test.rs  mega_macro_factory.rs  mlp_integration_test.rst  pagerank_integration_test.rs  projection_integration.rs  property_key_distribution.rs  property_selection_semantics.rs  sparse_list_consumers.rs  tensor_integration_tests.rs  test_phase1_arrow_factory.rs  test_phase2_arrow_references.rs  test_phase3_arrow_scanner.rs
gdsl/: Cargo.toml
gdsl/src/: empirical_forms.rs  lib.rs  messaging.rs  model_interface.rs  organic_unity.rs  pentadic.rs  projection_system.rs  sdsl_interface.rs  shell_language.rs  triadic.rs  ts_json.rs  userland_interface.rs
(+2250 files in other folders)
