[package]
name = "rust_gds"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_property"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.32", features = [
    "dtype-date",
    "dtype-datetime",
    "serde",
] }
memmap2 = "0.5"
arrow2 = "0.15"

[build-dependencies]
napi-build = "2"
