[package]
name = "rust_gds"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_gds"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.32", features = [
    "dtype-date",
    "dtype-datetime",
    "serde",
] }
memmap2 = "0.5"
arrow2 = "0.15"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.10"

[build-dependencies]
napi-build = "2"

[features]
default = []
cursor = []
core = ["cursor"]
arrow = []
io = []
pipeline = []
# Config system optional features
serde = []        # Enables config serialization (serde already in deps)
config-files = [] # Future: YAML/JSON file loading
