[package]
name = "gds"
version.workspace = true
edition.workspace = true

[lib]
name = "gds"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.32", features = [
    "dtype-date",
    "dtype-datetime",
    "serde",
] }
memmap2 = "0.5"
arrow2 = "0.15"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.10"
hdrhistogram = "7.5" # Histogram data structure for statistics
paste = "1.0" # Token pasting for macro generation (builder names, etc.)
anyhow = "1.0"
bincode = "1.3"
derive_more = "0.99"
derive_builder = "0.12"
log = "0.4.28"

[build-dependencies]
napi-build = "2"

[features]
default = []
cursor = []
core = ["cursor"]
arrow = []
io = []
pipeline = []
triadic_codegen_preview = []
# Config system optional features
serde = []        # Enables config serialization (serde already in deps)
config-files = [] # Future: YAML/JSON file loading
